--- a/web/desktop.html
+++ b/web/desktop.html
@@ -36,7 +36,7 @@
         <p>
         Šios genties paslaptingos būtybės - Domai, veikia kaip pranašai, žyniai, dievybės, elementų ir gamtos jėgų įsikūnijimai.<br>
         <br>
-        Domai atgyja ir materializuojasi į fizinį pasaulį retai, tik tam tikrų aplinkybių metu, tad išvysti viena jų savomis akimis yra įsirėžianti patirtis.
+        Domai atgyja ir materializuojasi į fizinį pasaulį retai, tik tam tikrų aplinkybių metu, tad išvysti vieną jų savomis akimis yra giliai į atmintį įsirėžianti patirtis.
         </p>
     </div>
 
@@ -56,7 +56,7 @@
             <h1 id="pavadinimas">PataDomas</h1>
             <p> Šis Domas yra mus supančių gamtos ir visatos jėgų fizinė manifestacija, jų balsas. Įsiklausyk, išgirsk, nes mes kiekvienas esame tos gamtos dalis.<br>
             <br>
-            PataDomas apsireiškia trijų skirtingų energijų formomis, kiekviena skelbia išmintį savu kampu. Kuri apsireikš prieš jį atsisijojus tau? Tai priklauso nuo to, kokį žmogų tavyje PataDomas pamatys.</p>
+            PataDomas apsireiškia trijų skirtingų energijų formomis, kiekvienoje formoje glūdi amžių patikrinta išmintis. Kuri apsireikš prieš jį atsisijojus tau? Tai priklauso nuo to, kokį žmogų tavyje PataDomas pamatys.</p>
             <div class="controls">
                 <label class="switch"> 
                     <input type="checkbox" class="activate"> 
@@ -81,7 +81,7 @@
         <div class="info">
             <h1 id="pavadinimas"> AsiDomas</h1>
 
-            <p> Šis Domas apsireiškia tik euforiškų emocijų ir patirčių apsuptyje. Jis priešingai nei jo broliai neegzistuoja tam kad kažką įrodytų, kažką pakeistų, jis tiesiog yra.<br>
+            <p> Šis Domas apsireiškia tik euforiškų emocijų ir patirčių apsuptyje. Jis, priešingai nei jo broliai, neegzistuoja tam, kad įrodytų ar pakeistų, jis tiesiog yra.<br>
             <br>
             AsiDomas gali būti aptiktas įvairaus jo egzistavimo fazių metu. Jis tausoja gerus dalykus, juos pertraukdamas gilaus poilsio ir apmąstymo būtimi.</p>
             <div class="controls">
@@ -108,9 +108,9 @@
         <div class="info">
             <h1 id="pavadinimas"> KabukiDomas</h1>
             <h2> (Kartu su NowJapan)</h2> <img src="nowjapan.svg" style="display: inline-block; relative; top: 5%; right: 10%;width: 16%; height: 16%;z-index: 8;">
-            <p> Šis Domo šaknys tęsiasi toli į rytus, iki pat Japonijoje slypinčių veikėjų.<br>
+            <p> Šio Domo šaknys tęsiasi toli į rytus, iki pat Japonijos saloje slypinčių dramatiškų veikėjų.<br>
             <br><br>
-            KabukiDomas kiekvienam išdrįsusiam prieiti ir prašyti žvilgsnio į ateitį atskleis japoniška trieile poema, kas to žmogaus laukia.</p>
+            KabukiDomas - tai kiekvienam išdrįsusiam prieiti ir paprašyti žvilgsnio, kuris jo ateitį atskleis japoniška trieile poema.</p>
             <div class="controls">
                 <label class="switch"> 
                     <input type="checkbox" id="activate"> 
