--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta http-equiv="Refresh" content="0; url='https://i.imgur.com/skVvgtM.gif'" />
 <html lang="lt">
 <head>
     <meta charset="utf-8">
